Add descriptive page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Portfolio</title>
+<title>Hiwot's Portfolio</title>
  
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,29 +40,6 @@
             </ul> 
         </div>
         <div class="scroll">
-            <img src="image/Disabled.png" alt="Scroll down" >
-        </div>
-    </section>
-
-    <section class="headline-desk-container">
-        <div id="desktop-headline">
-            <h1>Hey there. I'm Hiwot<span class="h1color"><br>
-             I'm a software developer</span>
-            </h1>
-            <p>  I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to contact me.
-            </p>
-        <div>
-            <ul id="desktop-socialt">
-                <li> <a href="#"><img src="image/github.svg" /></a> &nbsp; &nbsp; </li>
-                <li> <a href="#"><img src="image/vector.png" /></a> </li>
-                <li> <a href="#"><img src="image/Vector (1).png" /></a> &nbsp; &nbsp; </li>
-                <li> <a href="#"><img src="image/angellist.svg" /></a> &nbsp; </li>
-                <li> <a href="#"><img src="image/twitter.svg" /></a> &nbsp; &nbsp; </li>
-                <li> <a href="#"><img src="image/medium.svg" /></a> &nbsp; &nbsp; </li>
-            </ul> 
-        </div>
-        <div id="scroll">
             <img src="image/Disabled.png" alt="Scroll down" >
         </div>
     </section>
