--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             <div class="back-image-3"></div>
                 <h3>About me</h3>
             </div>
-        <div class="about-supporting-text">
+        <p class="about-supporting-text">
             I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
             don’t hestiate to contact me.
-        </div >
+        </p >
         <div class="button-resume">
             <button class="get-resume">Get My Resume</button>
         </div>
