added an attribute of placeholder, maxlength and required at #189.

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <div class="form-section">
             <form action="https://formspree.io/f/myyvjjng" method="post" id="form">
                 <div class="form-input">
-                    <input type="text"  id="name" name="user_name" >
-                    <input type="email"  id="email" name="user_email">
+                    <input type="text"  id="name" name="user_name" placeholder="Full Name" maxlength="30" required>
+                    <input type="email"  id="email" name="user_email" placeholder="Email Address" required>
                     <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
                 </div>
                 <div class="desktop-form-input">
