--- a/index.html
+++ b/index.html
@@ -179,5 +179,56 @@
         </div> 
     </div>
     </section>
+    <Section class="contact">
+        <h3>
+            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+        </h3>
+        <div class="form-section">
+            <form action="https://formspree.io/f/myyvjjng" method="post" id="form">
+                <div class="form-input">
+                    <input type="text"  id="name" name="user_name" >
+                    <input type="email"  id="email" name="user_email">
+                    <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
+                </div>
+                <div class="desktop-form-input">
+                    <div class="first-and-last">
+                    <input type="text"  id="fristname" name="user_name" placeholder="First Name" maxlength="30" required>
+                    <input type="text" id="lastname" name="last_name" placeholder="Last Name" maxlength="30" required> 
+                    </div>
+                    <input type="email"  id="email" name="user_email"  placeholder="Email address" required>
+                    <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
+                </div>
+                <div class="back-img4"></div>
+                <div class="get-in-touch-btn">
+                    <button class="form-btn" type="submit">Get in touch </button>
+                </div>
+            
+            </form>
+        </div>
+    </Section>
+    <footer class="footer-section">
+        <!-- <div class="desktop-line"><hr></div> -->
+            <div class="contact-social">
+                <div class="social-media">
+                <ul class="socialt">
+                    <li> <a href="#"><img src="image/github.svg" /></a> &nbsp; &nbsp; </li>
+
+                    <li> <a href="#"><img src="image/vector.png" /></a> </li>
+                    <li> <a href="#"><img src="image/Vector (1).png" /></a> &nbsp; &nbsp; </li>
+                    <li> <a href="#"><img src="image/angellist.svg" /></a> &nbsp; </li>
+                    <li> <a href="#"><img src="image/twitter.svg" /></a> &nbsp; &nbsp; </li>
+                    <li> <a href="#"><img src="image/medium.svg" /></a> &nbsp; &nbsp; </li>
+
+                </ul> 
+                </div>              
+                <div class="footer-email">
+                    <a href="mailto:hiwina@gmail.com" id="contact-email">hiwina@gmail.com</a>                
+                </div>
+            </div>
+            <div>
+                <img src="image/Light.png" alt="footer image" id="footer-image">
+            </div>
+    </footer>
+
 </body>
 </html>
