--- a/index.html
+++ b/index.html
@@ -190,14 +190,6 @@
                     <input type="email"  id="email" name="user_email" placeholder="Email Address" required>
                     <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
                 </div>
-                <div class="desktop-form-input">
-                    <div class="first-and-last">
-                    <input type="text"  id="fristname" name="user_name" placeholder="First Name" maxlength="30" required>
-                    <input type="text" id="lastname" name="last_name" placeholder="Last Name" maxlength="30" required> 
-                    </div>
-                    <input type="email"  id="email" name="user_email"  placeholder="Email address" required>
-                    <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
-                </div>
                 <div class="back-img4"></div>
                 <div class="get-in-touch-btn">
                     <button class="form-btn" type="submit">Get in touch </button>
@@ -212,10 +204,9 @@
                 <div class="social-media">
                 <ul class="socialt">
                     <li> <a href="#"><img src="image/github.svg" /></a> &nbsp; &nbsp; </li>
-
                     <li> <a href="#"><img src="image/vector.png" /></a> </li>
                     <li> <a href="#"><img src="image/Vector (1).png" /></a> &nbsp; &nbsp; </li>
-                    <li> <a href="#"><img src="image/angellist.svg" /></a> &nbsp; </li>
+                    <li> <a href="#"><img src="image/angellist.svg" /></a> &nbsp; &nbsp; </li>
                     <li> <a href="#"><img src="image/twitter.svg" /></a> &nbsp; &nbsp; </li>
                     <li> <a href="#"><img src="image/medium.svg" /></a> &nbsp; &nbsp; </li>
 
