Fix color of button as Figma template

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
         </div> 
     </div>
     </section>
-    <Section class="contact">
+    <Section class="contact-form">
+        <div class="contact">
         <h3>
             I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
         </h3>
@@ -227,15 +228,17 @@
                     <input type="email"  id="email" name="user_email"  placeholder="Email address" required>
                     <textarea type="text"  id="message" name="user_message"  maxlength="500" placeholder="Enter text here" required></textarea>
                 </div>
-                <div class="back-img4"></div>
                 <div class="get-in-touch-btn">
                     <button class="form-btn" type="submit">Get in touch </button>
                 </div> 
             </form>
         </div>
+    </div>
+    <div class="back-img4"></div>
     </Section>
+
     <footer class="footer-section">
-        <div class="desktop-line"><hr></div>
+        <hr>
             <div class="contact-social">
                 <div class="social-media">
                 <ul class="socialt">
@@ -256,5 +259,7 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
+
 </body>
+
 </html>
