Fix alignment for footer section

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <footer class="footer-section">
         <hr>
             <div class="contact-social">
-                <div class="social-media">
+                <div>
                 <ul class="socialt">
                     <li> <a href="#"><img src="image/github.svg" /></a> &nbsp; &nbsp; </li>
                     <li> <a href="#"><img src="image/vector.png" /></a> </li>
