Add the menu-mobile

--- a/index.html
+++ b/index.html
@@ -11,24 +11,38 @@
 <body> 
     <header class="navigation">
         <nav class="toolbar-container">
-            <div class="logo"><a href="#welcome">Welcome</a></div>
-            <div>
-                <a class="icon" ><a href="#menu-bar">
+            <div class="logo">
+                <a href="#welcome">Welcome</a>        </div>
+
+            <div class="icon">
+                <a href="#">
                 <i class="fa fa-bars"></i></a>
             </div>
         </nav>
     </header>
+    <div >
+        <div class="hidden-menu">
+            <a href="#" class="close nav-link"><img src="image/Icon.png" class="close-button"></a>
+
+            <ul class="menu-list">
+              <li><a class="nav-link" href="#header"></a></li>
+              <li><a  href="#pwork" class="nav-link">Portfolio</a></li>
+              <li><a class="nav-link" href="#pabout">About</a></li>
+              <li><a class="nav-link" href="#form">Contact</a></li>
+            </ul>
+        </div>
+    </div>
     <header class="desktop-image">
         <nav class="desktop-nav" desktop-image>
             <ul class="menu-bar">
-                <li><a href="#portoflio">Portfolio</a> </li>
+                <li><a href="#recent-works">Portfolio</a> </li>
                 <li></li><a href="#about">About</a> </li>
                 <li> <a href="#contact">Contact</a> </li>
             </ul> 
         </nav>
     </header> 
-
-    <section class="headline back-image">
+    
+    <section class="headline back-image" id="headline">
         <div class="primary-headline" id="desktop-primary">
             <h1>Hey there. I'm <br> Hiwot<span class="h1color"><br>
              I'm a software developer</span>
@@ -77,7 +91,7 @@
         </div>
     </section>
 
-    <section class="recent-works-container" id="desktop-recent-works">
+    <section class="recent-works-container" id="pwork">
         
             <div class="primary-text" id="desktop-primary-text">
             <div><h3> My Recent Works</h3></div>
@@ -163,7 +177,7 @@
 
 
     <!-- 7777 -->
-    <section class="about back-image-2">
+    <section class="about back-image-2" id="pabout" >
         <div class="about-primary-text" id="desktop-about-primary-text">
             <div class="back-image-3" id="back-image"></div>
                 <h3>About me</h3>
@@ -257,5 +271,6 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
+    <script src="menu.js"></script>
 </body>
 </html>
