--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
         </nav>
     </header>
-    <div >
-        <div class="hidden-menu">
+    <header class="hidden-menu" >
+        
             <a href="#" class="close nav-link"><img src="image/Icon.png" class="close-button"></a>
             <ul class="menu-list">
               <li><a class="nav-link" href="#header"></a></li>
@@ -29,9 +29,9 @@
               <li><a class="nav-link" href="#pabout">About</a></li>
               <li><a class="nav-link" href="#form">Contact</a></li>
             </ul>
-        </div>
+       
         <span class="line"></span>
-    </div>
+    </header>
     <header class="desktop-image">
         <nav class="desktop-nav" desktop-image>
             <ul class="menu-bar">
