--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li><a class="nav-link" href="#pabout">About</a></li>
               <li><a class="nav-link" href="#form">Contact</a></li>
             </ul>
-        <span class="line"></span>
+       <div class="shape"> <span class="line"></span> </div>
     </header>
     <header class="desktop-image">
         <nav class="desktop-nav" desktop-image>
