Add the HTML, css, javascript and linter files

--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
 </head>
 
 <body> 
+    <h1> fjhjghsjfhgjkfshgjksrhfgjhfsjghjsfhgjh</h1>
     <header class="navigation">
         <nav class="toolbar-container">
             <div class="logo"><a href="#welcome">Welcome</a></div>
             <div>
-                <a class="icon" ><a href="#menu-bar">
+                <a class="icon" ><a href="#">
                 <i class="fa fa-bars"></i></a>
             </div>
         </nav>
     </header>
+    <header class="hidden-menu" >
+        <a href="#" class="close nav-link"><img src="image/Icon.png" class="close-button"></a>
+        <ul class="menu-list">
+          <li><a class="nav-link" href="#header"></a></li>
+          <li><a  href="#pwork" class="nav-link">Portfolio</a></li>
+          <li><a class="nav-link" href="#pabout">About</a></li>
+          <li><a class="nav-link" href="#form">Contact</a></li>
+        </ul>
+   <div class="shape"> <span class="line"></span> </div>
+   </header>
     <header class="desktop-image">
         <nav class="desktop-nav" desktop-image>
             <ul class="menu-bar">
@@ -257,5 +268,6 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
+     <script src="menu.js"></script>
 </body>
 </html>
