Fix humberger menu

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body> 
-    <h1> fjhjghsjfhgjkfshgjksrhfgjhfsjghjsfhgjh</h1>
+
     <header class="navigation">
         <nav class="toolbar-container">
             <div class="logo"><a href="#welcome">Welcome</a></div>
-            <div>
-                <a class="icon" ><a href="#">
+            <div class="icon">
+                <a href="#">
                 <i class="fa fa-bars"></i></a>
             </div>
         </nav>
