Fix height of menu

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
           <li><a class="nav-link" href="#pabout">About</a></li>
           <li><a class="nav-link" href="#form">Contact</a></li>
         </ul>
-   <div class="shape"> <span class="line"></span> </div>
+        <div class="menu-footer">
+            <span class="line"></span> 
+           </div>
    </header>
+   
+
     <header class="desktop-image">
         <nav class="desktop-nav" desktop-image>
             <ul class="menu-bar">
