Add anchor tag to redirect

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="#" class="close nav-link"><img src="image/Icon.png" class="close-button"></a>
         <ul class="menu-list">
           <li><a class="nav-link" href="#header"></a></li>
-          <li><a  href="#pwork" class="nav-link">Portfolio</a></li>
-          <li><a class="nav-link" href="#pabout">About</a></li>
+          <li><a  href="#desktop-recent-works" class="nav-link">Portfolio</a></li>
+          <li><a class="nav-link" href="#desktop-about-primary-textls">About</a></li>
           <li><a class="nav-link" href="#form">Contact</a></li>
         </ul>
         <div class="menu-footer">
