Change to html, js and css

--- a/index.html
+++ b/index.html
@@ -100,82 +100,7 @@
              
              <div><img src="image/indicator.jpg" class="indicator"></div>
         </div>
-         <section class="projects" id="desktop-projects">
-            <div class="project1" id="desktop-project1">  
-                
-                <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div> 
-            </div>
-            <div class="project2" id="desktop-project2">  
-                 <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div> 
-            </div>
-            <div class="project3" id="desktop-project3">  
-                 <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div>  
-            </div>
-            <div class="project4" id="desktop-project4">  
-                <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div> 
-            </div>
-             <div class="project5" id="desktop-project5">  
-                <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div> 
-            </div>
-            <div class="project6" id="desktop-project6">   
-                <div class="project-detail" id="desktop-project-detail">
-                    <h4>Multi-Post Stories Gain+Glory</h4>
-                    <ul class="button-detail" id="desktop-button-detail"> 
-                        <li>Ruby on rails</li>
-                        <li>css</li>
-                        <li>JavScript</li>
-                        <li>html</li>
-                    </ul>
-                    <button class="see-project" id="desktop-see-project">See project </button>
-                </div> 
-            </div>
-        </section>
-    </section>
+         <div class="projects" id="desktop-projects"></div>
 
 
     <!-- 7777 -->
