Add form validation

--- a/index.html
+++ b/index.html
@@ -198,6 +198,6 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
-     <script src="menu.js"></script>
+     <script src="menu.js" defer></script>
 </body>
 </html>
