--- a/index.html
+++ b/index.html
@@ -199,6 +199,6 @@
             </div>
     </footer>
     <div id="overlay"></div>
-     <script src="menu.js"></script>
+     <script defer src="menu.js"></script>
 </body>
 </html>
