--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
-    <div id="overlay"></div>
+    <div id="overlay"></div></div>
      <script defer src="menu.js"></script>
 </body>
 </html>
