Add form validation

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                     <button class="form-btn" type="submit">Get in touch </button>
                 </div> 
             </form>
+            <div class="error"></div>
         </div>
     </div>
     <div class="back-img4"></div>
@@ -198,6 +199,7 @@
                 <img src="image/Light.png" alt="footer image" id="footer-image">
             </div>
     </footer>
-     <script src="menu.js" defer></script>
+    <div id="overlay"></div></div>
+     <script defer src="menu.js"></script>
 </body>
-</html>
+</html
